# matcouply

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.rst  bumpversion.cfg  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: Build.yml  Tests.yml
docs/: about_matcouply.rst  api.rst  conf.py  contributing.rst  coupled_matrix_factorization.rst  index.rst  installation.rst  optimization.rst  references.bib  references.rst
docs/_templates/: layout.html
docs/auto_examples/: index.rst  plot_bikesharing.ipynb  plot_bikesharing.py.md5  plot_bikesharing.rst  plot_bikesharing_codeobj.pickle  plot_custom_penalty.ipynb  plot_custom_penalty.py.md5  plot_custom_penalty.rst  plot_custom_penalty.rst.new  plot_custom_penalty_codeobj.pickle  plot_custom_penalty_codeobj.pickle.new  plot_examining_different_number_of_components.ipynb  plot_examining_different_number_of_components.py.md5  plot_examining_different_number_of_components.rst  plot_examining_different_number_of_components_codeobj.pickle  plot_semiconductor_etch_analysis.ipynb  plot_semiconductor_etch_analysis.py.md5  plot_semiconductor_etch_analysis.rst  plot_semiconductor_etch_analysis_codeobj.pickle  plot_simulated_nonnegative.ipynb  plot_simulated_nonnegative.py  plot_simulated_nonnegative.py.md5  plot_simulated_nonnegative.rst  plot_simulated_nonnegative_codeobj.pickle  sg_execution_times.rst
docs/autodoc/: cmf_aoadmm.rst  coupled_matrices.rst  datasets.rst  decomposition.rst  penalties.rst  random.rst
docs/notebooks/: index.rst  notebook_example_comparison.ipynb
examples/: README.rst  plot_bikesharing.py  plot_custom_penalty.py  plot_examining_different_number_of_components.py  plot_semiconductor_etch_analysis.py  plot_simulated_nonnegative.py  semiconductor_etch_analysis.py
src/cm_aoadmm/: __init__.py  _utils.py  cmf_aoadmm.py  coupled_matrices.py  penalties.py  random.py
src/matcouply/: __init__.py  _doc_utils.py  _unimodal_regression.py  _utils.py  cmf_aoadmm.py  conftest.py  coupled_matrices.py  data.py  decomposition.py  penalties.py  random.py  testing.py
src/matcouply/testing/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_cmf_aoadmm.py  test_coupled_matrices.py  test_data.py  test_decomposition.py  test_penalties.py  test_random.py  test_unimodal_regression.py  test_utils.py  utils.py
