

[metadata]
name = cm_aoadmm
keywords=cm_aoadmm
version = 0.0.1
license = "MIT license",
description = Regularised coupled matrix factorisation with AO-ADMM
long_description = file: README.rst
author = Marie Roald
author_email = roald.marie@gmail.com
url=https://github.com/marieroald/cm_aoadmm
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    tensorly

[options.extra_requires]
all=
    condat_tv

[options.packages.find]
where=src



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 120


