[metadata]
name = matcouply
keywords=matcouply
version = 0.1.0
license = MIT
description = Regularized coupled matrix factorisation with AO-ADMM
long_description = file: README.rst
author = Marie Roald
author_email = roald.marie@gmail.com
url=https://github.com/marieroald/matcouply
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    tensorly
    pandas
    tqdm
python_requires = >=3.6

[options.extras_require]
numba=
    numpy >= 1.22.1
    numba == 0.53.1
gpl=
    condat-tv
devel=
    coverage
    pytest
    pytest-cov
    pytest-randomly
    flake8
    darglint
    black
    isort
    sphinx
    sphinx-rtd-theme
    sphinx-gallery
    sphinxcontrib-bibtex
    autodocsumm
    bump2version
    wheel
    scikit-learn

examples=
    matplotlib
    plotly
    wordcloud

[options.packages.find]
where=src

[flake8]
ignore = E741, E203, W503
exclude = docs
max-line-length = 120
docstring_style = numpy

[coverage:run]
omit = 
    src/matcouply/_doc_utils.py
    src/matcouply/conftest.py
